@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- *  RCS: @(#) $Id: tkBind.c,v 1.23 2002/06/14 23:16:24 mdejong Exp $
+ *  RCS: @(#) $Id: tkBind.c,v 1.24 2002/06/15 02:15:51 hobbs Exp $
  */
 
 #include "tkPort.h"
@@ -3792,9 +3792,9 @@ HandleEventGenerate(interp, mainWin, objc, objv)
     if ((warp != 0) && Tk_IsMapped(tkwin)) {
 	TkDisplay *dispPtr;
 	dispPtr = TkGetDisplay(event.xmotion.display);
-	if (!dispPtr->warpInProgress) {
+	if (!(dispPtr->flags & TK_DISPLAY_IN_WARP)) {
 	    Tcl_DoWhenIdle(DoWarp, (ClientData) dispPtr);
-	    dispPtr->warpInProgress = 1;
+	    dispPtr->flags |= TK_DISPLAY_IN_WARP;
 	}
 	dispPtr->warpWindow = event.xany.window;
 	dispPtr->warpX = event.xkey.x;
@@ -3863,7 +3863,7 @@ DoWarp(clientData)
     XWarpPointer(dispPtr->display, (Window) None, (Window) dispPtr->warpWindow,
                      0, 0, 0, 0, (int) dispPtr->warpX, (int) dispPtr->warpY);
     XForceScreenSaver(dispPtr->display, ScreenSaverReset);
-    dispPtr->warpInProgress = 0;
+    dispPtr->flags &= ~TK_DISPLAY_IN_WARP;
 }
 
 /*
