@@ -1,5 +1,9 @@
 2002-06-14  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tkBind.c (HandleEventGenerate): 
+	* generic/tkInt.h: changed warpInProgress boolean from int to a
+	bit in the flags variable (TK_DISPLAY_IN_WARP)
+
 	* generic/tkCmds.c (Tk_TkObjCmd): 
 	* unix/tkUnixKey.c (TkpGetString): 
 	* generic/tkEvent.c (Tk_HandleEvent): 
